update with vertx deploymentoption